--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,9 @@ plugins:
   # - jemoji #Uncomment this to allow emoji in your post
 
 # Permalinks
-permalink:      /:year-:month-:day/:title
+permalink:      /blog/:year-:month-:day/:title/
 paginate:       5
+paginate_path: "/blog/page:num/"
 
 # Excludes
 exclude: [ Gemfile, Gemfile.lock, tale.gemspec ]
