Changed title tag

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:          Justin Goldstein
-description:    "Minimal Jekyll theme for storytellers"
+description:    "My website"
 baseurl:        ""
 url:            "https://jusgolds.github.io"
 
